--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.2.0",
     "astro": "^3.5.3",
+    "geist": "^1.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
